# oasis-jni-helpers

./: .gitignore  .travis.yml  LICENSE  README.md
.github/workflows/: test.yml
src/: JniContext.cpp  JniContext.h  JniLocalRef.h
test/: CMakeLists.txt  CMakeLists.txt.in  JStringLocalRef_test.cpp  JniGlobalRef_test.cpp  JniHelpersTestFixture.h  JniLocalRef_test.cpp
